--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <main>
-      <section class="card-component">
+      <div class="card-component">
         <article class="car-class sedan-sec">
           <img src="./images/icon-sedans.svg" alt="" class="icon" />
           <h2>Sedans</h2>
@@ -61,7 +61,7 @@
           </p>
           <button>Learn More</button>
         </article>
-      </section>
+      </div>
     </main>
 
     <footer>
